until recipies added

--- a/index.html
+++ b/index.html
@@ -13,17 +13,54 @@
 </head>
 <body>
     <section class="banner-section">
-    <div class="flaxible-area">
-        <div class="width-half">
+        <div class="banner-content">
             <h1><span class="orange-color">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
             <a class="link-button" href="">Order Food</a>
         </div>
 
-        <div class="width-half">
-            <img src="images/Mask group@2x.png" alt="image">
+        <div class="banner-image">
+            <img src="images/hero.png" alt="image">
         </div>
-    </div>
+    </section>
+
+    <section class="about-me">
+        <div class="about-image">
+            <img src="images/Person Image.png" alt="img">
+        </div>
+
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+                <a class="link-button" href="">Contact me</a>
+        </div>
+    </section>
+
+    <section class="my-recipies">
+        <div class="recipies-text">
+            <h2>My Recipies</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        </div>
+        <div class="recipies-title">
+            <div class="recipies-item">
+                <img src="images/Project Cover.png" alt="image">
+                <h3>Recipies Title</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="recipies-item">
+                <img src="images/Project Cover.png" alt="image">
+                <h3>Recipies Title</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
