social media part added

--- a/index.html
+++ b/index.html
@@ -62,5 +62,20 @@
             </div>
         </div>
     </section>
+
+    <section class="social-media">
+        <div class="youtube">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="youtube">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="youtube">
+            <h1>100k</h1>
+            <p>Dribbble Shot Likes</p>
+        </div>
+    </section>
 </body>
 </html>
