--- a/index.html
+++ b/index.html
@@ -77,5 +77,10 @@
             <p>Dribbble Shot Likes</p>
         </div>
     </section>
+
+    <footer>
+        <h3><span class="orange-color">Eat</span> Fresh</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 </html>
