--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     standard dummy text ever since the 1500s.</p>
             </div>
             <div class="recipies-item">
-                <img src="images/Project Cover.png" alt="image">
+                <img src="images/Project Cover1.jpg" alt="image">
                 <h3>Recipies Title</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and
                     typesetting industry. Lorem Ipsum has been the
